8176828: jtools do not list VM process launched with the debugger option suspend=y

Reviewed-by: dholmes, cjplummer